// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar should render a navbar with SignedIn links 1`] = `
<header
  className="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed"
  style={
    Object {
      "background": "#009688",
      "boxShadow": "none",
      "color": "white",
    }
  }
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <button
      aria-label="menu"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      />
    </button>
    <h5
      className="MuiTypography-root MuiTypography-h5"
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <a
        className="sc-htpNat hPRntI brand-logo"
        href="/"
        onClick={[Function]}
      >
        QuikBorrow
      </a>
    </h5>
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <a
        className="sc-bwzfXH jeMjYc"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
      <a
        className="sc-bwzfXH jeMjYc"
        href="/register"
        onClick={[Function]}
      >
        Register
      </a>
    </div>
  </div>
</header>
`;

exports[`Navbar should render a navbar with SignedOut links 1`] = `
<header
  className="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed"
  style={
    Object {
      "background": "#009688",
      "boxShadow": "none",
      "color": "white",
    }
  }
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <button
      aria-label="menu"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      />
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <h5
      className="MuiTypography-root MuiTypography-h5"
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <a
        className="sc-htpNat hPRntI brand-logo"
        href="/"
        onClick={[Function]}
      >
        QuikBorrow
      </a>
    </h5>
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <a
        className="sc-bwzfXH jeMjYc"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
      <a
        className="sc-bwzfXH jeMjYc"
        href="/register"
        onClick={[Function]}
      >
        Register
      </a>
    </div>
  </div>
</header>
`;
